--- a/index.html
+++ b/index.html
@@ -13,14 +13,18 @@
 		<link rel="stylesheet" type="text/css" href="assets/style/style.css">
 		<!-- Police perso -->
 		<link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
+		<!-- Matérials Icons -->
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+        rel="stylesheet">
 		<!-- Encodage caractères -->
 		<meta charset="utf-8">
 </head>
 <body>
 	<header>
 		<div class="menu">
-            <span class="title">Sitename</span>
+            
             <input class="burger" type="checkbox">
+            <span class="title">Blog</span>
             <nav>
                 <input type="search" placeholder="Rechercher...">
                 <a href="#"><i class="material-icons">home</i>Home</a>
@@ -28,7 +32,53 @@
                 <a href="#"><i class="material-icons">drafts</i>Contact</a>
                 <a href="#"><i class="material-icons">face</i>Profile</a>
             </nav>
+
         </div>
 	</header>
+
+<div id="slider">
+	<!--<div id="banner">-->
+		<span id="textbanner">Blog de dylan</span>
+	<!--</div>-->
+  		<figure> 
+	    	<img src="assets/img/dl1.jpg" alt="dl1">
+	    	<img src="assets/img/dl2.jpg" alt="dl2">
+	    	<img src="assets/img/dl3.jpg" alt="dl3">
+	    	<img src="assets/img/dl4.jpg" alt="dl4">
+	    	<img src="assets/img/dl5.jpg" alt="dl5">
+  		</figure>	
+</div>
+
+<section>
+	<article>
+		<h2>Tout savoir sur le web !</h2>
+		<div id="imgarticle">
+			<img src="assets/img/imgarticle.jpg" alt="image article">
+		</div>
+		<p>date : 21/05/2019</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim dolorum quibusdam mollitia nostrum provident accusamus ipsam quisquam, eius ratione consequatur expedita dolores ad quaerat autem temporibus molestias. Dolorum, itaque, dolor.</p>
+	</article>
+
+	<article>
+		<h2>Le design et vous</h2>
+		<div id="imgarticle">
+			<img src="assets/img/imgarticle2.jpg" alt="image article">
+		</div>
+		<p>date : 23/05/2019</p>
+		<p>Daddy Bender, we're hungry. Yes. You gave me a dollar and some candy. You won't have time for sleeping, soldier, not with all the bed making you'll be doing. I found what I need. And it's not friends, it's things.Negative, bossy meat creature! I can explain. It's very valuable. File not found. And yet you haven't said what I told you to say! How can any of us trust you?
+
+I'm sure those windmills will keep them cool.</p>
+	</article>
+</section>
+
+<footer class="row">
+	<div class="col-6" id="footericons">
+		<a href=""><img src="assets/img/icon facebook.png" alt=""></a>
+		<a href=""><img src="assets/img/icon instagram.png" alt=""></a>
+		<a href=""><img src="assets/img/icon twitter.png" alt=""></a>
+	</div>
+	<p id="textfooter" class="col-6">Contact : </br> Tavares Dylan , 16 rue de la soif 06515 Carros</p>
+</footer>
+
 </body>
 </html>
