--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 	<header>
 		<div class="menu">
             
-            <input class="burger" type="checkbox">
             <span class="title">Blog</span>
+            <input class="burger" type="checkbox">
             <nav>
                 <input type="search" placeholder="Rechercher...">
                 <a href="#"><i class="material-icons">home</i>Home</a>
-        		<a href="#"><i class="material-icons">directions_car</i>Product</a>
+        		<a href="#"><i class="material-icons">power_settings_new</i>Connexion</a>
+                <a href="#"><i class="material-icons">person_add</i>Inscription</a>
                 <a href="#"><i class="material-icons">drafts</i>Contact</a>
-                <a href="#"><i class="material-icons">face</i>Profile</a>
             </nav>
 
         </div>
@@ -55,8 +55,11 @@
 		<div id="imgarticle">
 			<img src="assets/img/imgarticle.jpg" alt="image article">
 		</div>
-		<p>date : 21/05/2019</p>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim dolorum quibusdam mollitia nostrum provident accusamus ipsam quisquam, eius ratione consequatur expedita dolores ad quaerat autem temporibus molestias. Dolorum, itaque, dolor.</p>
+		<div class="textarticle">
+			<p>date : 21/05/2019</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim dolorum quibusdam mollitia nostrum provident accusamus ipsam quisquam, eius ratione consequatur expedita dolores ad quaerat autem temporibus molestias. Dolorum, itaque, dolor.</p>
+			</p><a href="#">Suite...</a>
+		</div>
 	</article>
 
 	<article>
@@ -64,10 +67,20 @@
 		<div id="imgarticle">
 			<img src="assets/img/imgarticle2.jpg" alt="image article">
 		</div>
-		<p>date : 23/05/2019</p>
-		<p>Daddy Bender, we're hungry. Yes. You gave me a dollar and some candy. You won't have time for sleeping, soldier, not with all the bed making you'll be doing. I found what I need. And it's not friends, it's things.Negative, bossy meat creature! I can explain. It's very valuable. File not found. And yet you haven't said what I told you to say! How can any of us trust you?
-
-I'm sure those windmills will keep them cool.</p>
+		<div class="textarticle">
+			<p>date : 23/05/2019</p>
+			<p>Daddy Bender, we're hungry. Yes. You gave me a dollar and some candy. You won't have time for sleeping, soldier, not with all the bed making you'll be doing. I found what I need. And it's not friends, it's things.Negative, bossy meat creature! I can explain. It's very valuable. File not found. And yet you haven't said what I told you to say! How can any of us trust you?I'm sure those windmills will keep them cool.</p><a href="#">Suite...</a>
+		</div>
+	</article>
+	<article>
+		<h2>CSS 3</h2>
+		<div id="imgarticle">
+			<img src="assets/img/imgarticle3.jpg" alt="image article">
+		</div>
+		<div class="textarticle">
+			<p>date : 26/05/2019</p>
+			<p>Avec l'arrivée de CSS3, les développeurs web ont vu leurs possibilités en webdesign se multiplier : que ce soient les coins arrondis, les fonds en dégradé ou encore les rotations, les nouvelles fonctionnalités utilisables laissent rêveur.</p><a href="#">Suite...</a>
+		</div>
 	</article>
 </section>
 
