page inscription en cour

--- a/page_1.html
+++ b/page_1.html
@@ -27,10 +27,10 @@
             <input class="burger" type="checkbox">
             <nav>
                 <input type="search" placeholder="Rechercher...">
-                <a href="index.html"><i class="material-icons">home</i>Home</a>
-        		<a href="connexion.html"><i class="material-icons">power_settings_new</i>Connexion</a>
-                <a href="inscription.html"><i class="material-icons">person_add</i>Inscription</a>
-                <a href="contact.html"><i class="material-icons">drafts</i>Contact</a>
+                <a href="#"><i class="material-icons">home</i>Home</a>
+        		<a href="#"><i class="material-icons">power_settings_new</i>Connexion</a>
+                <a href="#"><i class="material-icons">person_add</i>Inscription</a>
+                <a href="#"><i class="material-icons">drafts</i>Contact</a>
             </nav>
 
         </div>
@@ -51,35 +51,35 @@
 
 <section>
 	<article>
-		<h2>Tout savoir sur le web !</h2>
+		<h2>Intelligence artificielle</h2>
 		<div id="imgarticle">
-			<img src="assets/img/imgarticle.jpg" alt="image article">
+			<img src="assets/img/imgarticle4.jpg" alt="image article">
 		</div>
 		<div class="textarticle">
-			<p>date : 21/05/2019</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim dolorum quibusdam mollitia nostrum provident accusamus ipsam quisquam, eius ratione consequatur expedita dolores ad quaerat autem temporibus molestias. Dolorum, itaque, dolor.</p>
+			<p>date : 30/05/2019</p>
+			<p>No… It's a thing; it's like a plan, but with more greatness. Aw, you're all Mr. Grumpy Face today. Aw, you're all Mr. Grumpy Face today. Heh-haa! Super squeaky bum time! It's art! A statement on modern society, 'Oh Ain't Modern Society Awful?'!They're not aliens, they're Earth…liens! I'm nobody's taxi service; I'm not gonna be there to catch you every time you feel like jumping out of a spaceship. Saving the world with meals on wheels.</p>
 			</p><a href="#">Suite...</a>
 		</div>
 	</article>
 
 	<article>
-		<h2>Le design et vous</h2>
+		<h2>Découvrez le 1er téléphone pliable</h2>
 		<div id="imgarticle">
-			<img src="assets/img/imgarticle2.jpg" alt="image article">
+			<img src="assets/img/imgarticle5.jpg" alt="image article">
 		</div>
 		<div class="textarticle">
-			<p>date : 23/05/2019</p>
-			<p>Daddy Bender, we're hungry. Yes. You gave me a dollar and some candy. You won't have time for sleeping, soldier, not with all the bed making you'll be doing. I found what I need. And it's not friends, it's things.Negative, bossy meat creature! I can explain. It's very valuable. File not found. And yet you haven't said what I told you to say! How can any of us trust you?I'm sure those windmills will keep them cool.</p><a href="#">Suite...</a>
+			<p>date : 10/06/2019</p>
+			<p>I'm afraid I just blue myself. I hear the jury's still out on science. Get me a vodka rocks. And a piece of toast. Now, when you do this without getting punched in the chest, you'll have more fun. Bad news. Andy Griffith turned us down. He didn't like his trailer.No, I did not kill Kitty. However, I am going to oblige and answer the nice officer's questions because I am an honest man with no secrets to hide. Across from where? I'm half machine. I'm a monster. Did you enjoy your meal, Mom? You drank it fast enough.</p><a href="#">Suite...</a>
 		</div>
 	</article>
 	<article>
-		<h2>CSS 3</h2>
+		<h2>Pourquoi apprendre javascript ?</h2>
 		<div id="imgarticle">
-			<img src="assets/img/imgarticle3.jpg" alt="image article">
+			<img src="assets/img/imgarticle6.jpg" alt="image article">
 		</div>
 		<div class="textarticle">
-			<p>date : 26/05/2019</p>
-			<p>Avec l'arrivée de CSS3, les développeurs web ont vu leurs possibilités en webdesign se multiplier : que ce soient les coins arrondis, les fonds en dégradé ou encore les rotations, les nouvelles fonctionnalités utilisables laissent rêveur.</p><a href="#">Suite...</a>
+			<p>date : 15/06/2019</p>
+			<p>You are a part of the Rebel Alliance and a traitor! Take her away! Kid, I've flown from one side of this galaxy to the other. I've seen a lot of strange stuff, but I've never seen anything to make me believe there's one all-powerful Force controlling everything. There's no mystical energy field that controls my destiny. It's all a lot of simple tricks and nonsense.I want to come with you to Alderaan. There's nothing for me here now. I want to learn the ways of the Force and be a Jedi, like my father before me. The more you tighten your grip, Tarkin, the more star systems will slip through your fingers.</p><a href="#">Suite...</a>
 		</div>
 	</article>
 </section>
@@ -88,7 +88,7 @@
 	<div id="pages">
 		<a href="">&laquo;</a>
 		<a href="page_1.html">1</a>
-		<a href="">2</a>
+		<a href="page_2.html">2</a>
 		<a href="">3</a>
 		<a href="">4</a>
 		<a href="">5</a>
