connexion + inscription form

--- a/page_1.html
+++ b/page_1.html
@@ -27,10 +27,10 @@
             <input class="burger" type="checkbox">
             <nav>
                 <input type="search" placeholder="Rechercher...">
-                <a href="#"><i class="material-icons">home</i>Home</a>
-        		<a href="#"><i class="material-icons">power_settings_new</i>Connexion</a>
-                <a href="#"><i class="material-icons">person_add</i>Inscription</a>
-                <a href="#"><i class="material-icons">drafts</i>Contact</a>
+                <a href="index.html"><i class="material-icons">home</i>Home</a>
+        		<a href="connexion.html"><i class="material-icons">power_settings_new</i>Connexion</a>
+                <a href="inscription.html"><i class="material-icons">person_add</i>Inscription</a>
+                <a href="contact.html"><i class="material-icons">drafts</i>Contact</a>
             </nav>
 
         </div>
