--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
 	    <img src="assets/img/dl5.jpg" alt="dl5">
   	</figure>	
 </div>
-<section id="inscription" class="">
+<section id="" class="">
 	<article>
 	<h2>Contact</h2>
 <form action="" class="form-group row mt-3">
