--- a/connexion.html
+++ b/connexion.html
@@ -23,7 +23,7 @@
 	<header>
 		<div class="menu">
             
-            <span class="title">Blog</span>
+            <span class="title"><a href="index.html">Blog</a></span>
             <input class="burger" type="checkbox">
             <nav>
                 <input type="search" placeholder="Rechercher...">
