--- a/page_1.html
+++ b/page_1.html
@@ -23,7 +23,7 @@
 	<header>
 		<div class="menu">
             
-            <span class="title">Blog</span>
+            <span class="title"><a href="index.html">Blog</a></span>
             <input class="burger" type="checkbox">
             <nav>
                 <input type="search" placeholder="Rechercher...">
@@ -87,9 +87,9 @@
 <section id="pagination">
 	<div id="pages">
 		<a href="">&laquo;</a>
-		<a href="page_1.html">1</a>
-		<a href="page_2.html">2</a>
-		<a href="">3</a>
+		<a href="index.html">1</a>
+		<a href="page_1.html">2</a>
+		<a href="page_2.html">3</a>
 		<a href="">4</a>
 		<a href="">5</a>
 		<a href="">6</a>
