--- a/page_2.html
+++ b/page_2.html
@@ -51,35 +51,35 @@
 
 <section>
 	<article>
-		<h2>Tout savoir sur le web !</h2>
+		<h2>Le nouvel objectif de Nikon</h2>
 		<div id="imgarticle">
-			<img src="assets/img/imgarticle.jpg" alt="image article">
+			<img src="assets/img/imgarticle7.jpg" alt="image article">
 		</div>
 		<div class="textarticle">
-			<p>date : 21/05/2019</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim dolorum quibusdam mollitia nostrum provident accusamus ipsam quisquam, eius ratione consequatur expedita dolores ad quaerat autem temporibus molestias. Dolorum, itaque, dolor.</p>
+			<p>date : 30/06/2019</p>
+			<p>When I was first asked to make a film about my nephew, Hubert Farnsworth, I thought "Why should I?" Then later, Leela made the film. But if I did make it, you can bet there would have been more topless women on motorcycles. Roll film! Enough about your promiscuous mother, Hermes! We have bigger problems.</p>
 			</p><a href="#">Suite...</a>
 		</div>
 	</article>
 
 	<article>
-		<h2>Le design et vous</h2>
+		<h2>Testez la descente en rappel</h2>
 		<div id="imgarticle">
-			<img src="assets/img/imgarticle2.jpg" alt="image article">
+			<img src="assets/img/imgarticle8.jpg" alt="image article">
 		</div>
 		<div class="textarticle">
-			<p>date : 23/05/2019</p>
-			<p>Daddy Bender, we're hungry. Yes. You gave me a dollar and some candy. You won't have time for sleeping, soldier, not with all the bed making you'll be doing. I found what I need. And it's not friends, it's things.Negative, bossy meat creature! I can explain. It's very valuable. File not found. And yet you haven't said what I told you to say! How can any of us trust you?I'm sure those windmills will keep them cool.</p><a href="#">Suite...</a>
+			<p>date : 12/07/2019</p>
+			<p>This man is a knight in shining armor. You look…perfect. I'm partial to air conditioning. You look…perfect. Oh I beg to differ, I think we have a lot to discuss. After all, you are a client.I'm a sociopath; there's not much he can do for me. I like seafood. I am not a killer. Somehow, I doubt that. You have a good heart, Dexter. Tell him time is of the essence.</p><a href="#">Suite...</a>
 		</div>
 	</article>
 	<article>
-		<h2>CSS 3</h2>
+		<h2>Aller toujours plus vite !</h2>
 		<div id="imgarticle">
-			<img src="assets/img/imgarticle3.jpg" alt="image article">
+			<img src="assets/img/imgarticle9.jpg" alt="image article">
 		</div>
 		<div class="textarticle">
-			<p>date : 26/05/2019</p>
-			<p>Avec l'arrivée de CSS3, les développeurs web ont vu leurs possibilités en webdesign se multiplier : que ce soient les coins arrondis, les fonds en dégradé ou encore les rotations, les nouvelles fonctionnalités utilisables laissent rêveur.</p><a href="#">Suite...</a>
+			<p>date : 29/07/2019</p>
+			<p>Your eyes can deceive you. Don't trust them. She must have hidden the plans in the escape pod. Send a detachment down to retrieve them, and see to it personally, Commander. There'll be no one to stop us this time!</p><a href="#">Suite...</a>
 		</div>
 	</article>
 </section>
