--- a/article_1.html
+++ b/article_1.html
@@ -36,21 +36,7 @@
         </div>
 	</header>
 
-<div id="slider">
-	<!--<div id="banner">-->
-		<span id="textbanner">Blog de dylan</span>
-	<!--</div>-->
-  		<figure> 
-	    	<img src="assets/img/dl1.jpg" alt="dl1">
-	    	<img src="assets/img/dl2.jpg" alt="dl2">
-	    	<img src="assets/img/dl3.jpg" alt="dl3">
-	    	<img src="assets/img/dl4.jpg" alt="dl4">
-	    	<img src="assets/img/dl5.jpg" alt="dl5">
-  		</figure>	
-</div>
-
-<section>
-	<article>
+<article>
 		<h2>Tout savoir sur le web !</h2>
 		<div id="imgarticle">
 			<img src="assets/img/imgarticle.jpg" alt="image article">
@@ -58,46 +44,12 @@
 		<div class="textarticle">
 			<p>date : 21/05/2019</p>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim dolorum quibusdam mollitia nostrum provident accusamus ipsam quisquam, eius ratione consequatur expedita dolores ad quaerat autem temporibus molestias. Dolorum, itaque, dolor.</p>
-			</p><a href="article_1.html">Suite...</a>
 		</div>
+
+		<!-- Faire une section commentaire -->
 	</article>
 
-	<article>
-		<h2>Le design et vous</h2>
-		<div id="imgarticle">
-			<img src="assets/img/imgarticle2.jpg" alt="image article">
-		</div>
-		<div class="textarticle">
-			<p>date : 23/05/2019</p>
-			<p>Daddy Bender, we're hungry. Yes. You gave me a dollar and some candy. You won't have time for sleeping, soldier, not with all the bed making you'll be doing. I found what I need. And it's not friends, it's things.Negative, bossy meat creature! I can explain. It's very valuable. File not found. And yet you haven't said what I told you to say! How can any of us trust you?I'm sure those windmills will keep them cool.</p><a href="#">Suite...</a>
-		</div>
-	</article>
-	<article>
-		<h2>CSS 3</h2>
-		<div id="imgarticle">
-			<img src="assets/img/imgarticle3.jpg" alt="image article">
-		</div>
-		<div class="textarticle">
-			<p>date : 26/05/2019</p>
-			<p>Avec l'arrivée de CSS3, les développeurs web ont vu leurs possibilités en webdesign se multiplier : que ce soient les coins arrondis, les fonds en dégradé ou encore les rotations, les nouvelles fonctionnalités utilisables laissent rêveur.</p><a href="#">Suite...</a>
-		</div>
-	</article>
-</section>
-
-<section id="pagination">
-	<div id="pages">
-		<a href="">&laquo;</a>
-		<a href="index.html">1</a>
-		<a href="page_1.html">2</a>
-		<a href="page_2.html">3</a>
-		<a href="">4</a>
-		<a href="">5</a>
-		<a href="">6</a>
-		<a href="">&raquo;</a>
-	</div>
-</section>
-
-<footer class="row">
+	<footer class="row">
 	<div class="col-6" id="footericons">
 		<a href=""><img src="assets/img/icon facebook.png" alt=""></a>
 		<a href=""><img src="assets/img/icon instagram.png" alt=""></a>
