--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
 
 <section>
 	<article>
-		<h2>Tout savoir sur le web !</h2>
+		<h2>La physique Quantique au service de l'informatique</h2>
 		<div id="imgarticle">
-			<img src="assets/img/imgarticle.jpg" alt="image article">
+			<img src="https://lejournal.cnrs.fr/sites/default/files/styles/visuel_principal/public/assets/images/_mg_6970b.jpg?itok=shFXeuo7" alt="image article">
 		</div>
 		<div class="textarticle">
-			<p>date : 21/05/2019</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim dolorum quibusdam mollitia nostrum provident accusamus ipsam quisquam, eius ratione consequatur expedita dolores ad quaerat autem temporibus molestias. Dolorum, itaque, dolor.</p>
+			<p>date : 22/05/2019</p>
+			<p>Même si on a l’impression qu’un ordi fait plein de choses, en réalité, il n’a qu’une seule mission : il traite de l’information (d’où le mot “informatique“). Votre ordi stocke de l’information sur votre disque dur, il traite des infos avec son processeur (comme la page que vous lisez ou un film que vous regardez), et il transforme cette information en un son ou en image.</p>
 			</p><a href="article_1.html">Suite...</a>
 		</div>
 	</article>
