--- a/article_1.html
+++ b/article_1.html
@@ -49,12 +49,40 @@
 			</div>
 			<p>Même si on a l’impression qu’un ordi fait plein de choses, en réalité, il n’a qu’une seule mission : il traite de l’information (d’où le mot “informatique“). Votre ordi stocke de l’information sur votre disque dur, il traite des info avec son processeur (comme la page que vous lisez ou un film que vous regardez), et il transforme cette information en un son ou en image. Cette information que manipule l’ordinateur a la caractéristique d’être codée en binaire, c’est-à-dire avec des 0 et des 1. Autrement dit, un ordinateur réfléchit en binaire. Une mémoire d’ordinateur est ainsi constituée de milliards de cases contenant soit un 0, soit un 1. Une telle case s’appelle un <a href="https://www.journaldunet.fr/web-tech/dictionnaire-du-webmastering/1203567-bit-definition/">bit</a>.</p>
 		</div>
-		<!-- Faire une section commentaire -->
 	</article>
 </section>
-<section>
-	
+
+<section id="sectionCom">
+	<!-- ZONE DE TRAVAIL --><!-- ZONE DE TRAVAIL -->
+	<h2 id="nbcom"> 2 commentaires</h2>
+
+	<div class="containercom">
+		<div>
+			<img id="imgcomm" src="assets/img/photo_com2.jpg" alt="Image de profil">
+			<p>Richard Loyonnet</p>
+			<p>Date : 22/05/2019</p>
+		</div>
+		
+	</div>
+	<div id="com">
+		<p>Ceci est un commentaire très très très constructif et gentil :D !</p>
+	</div>
+
+	<div class="containercom">
+		<div>
+			<img id="imgcomm" src="assets/img/photo_com.jpg" alt="Image de profil">
+			<p>Tavares dylan</p>
+			<p>Date : 22/05/2019</p>
+		</div>
+		
+	</div>
+	<div id="com">
+		<p>Ceci est un commentaire très constructif !</p>
+	</div>
+
+	<!-- FIN ZONE DE TRAVAIL --><!-- FIN ZONE DE TRAVAIL -->
 </section>
+
 	<footer class="row">
 	<div class="col-6" id="footericons">
 		<a href=""><img src="assets/img/icon facebook.png" alt=""></a>
