Section commentaire ok

--- a/article_1.html
+++ b/article_1.html
@@ -53,7 +53,7 @@
 </section>
 
 <section id="sectionCom">
-	<!-- ZONE DE TRAVAIL --><!-- ZONE DE TRAVAIL -->
+
 	<h2 id="nbcom"> 2 commentaires</h2>
 
 	<div class="containercom">
@@ -79,8 +79,13 @@
 	<div id="com">
 		<p>Ceci est un commentaire très constructif !</p>
 	</div>
+	<div id="contTextArea">
+		<form id="formCom" action="" method="post">
+			<textarea id="textareaCom" placeholder="Écrivez votre commentaire"></textarea>
+			<input type="button" id="boutonCom" name="sub" value="Envoyer">
+		</form>
+	</div>
 
-	<!-- FIN ZONE DE TRAVAIL --><!-- FIN ZONE DE TRAVAIL -->
 </section>
 
 	<footer class="row">
