ajout icones commentaires index , modif bouton suite + correction

--- a/article_1.html
+++ b/article_1.html
@@ -80,9 +80,9 @@
 		<p>Ceci est un commentaire très constructif !</p>
 	</div>
 	<div id="contTextArea">
-		<form id="formCom" action="" method="post">
+		<form id="formCom" action="#" method="post">
 			<textarea id="textareaCom" placeholder="Écrivez votre commentaire"></textarea>
-			<input type="button" id="boutonCom" name="sub" value="Envoyer">
+			<input type="submit" id="boutonCom" name="sub" value="Envoyer">
 		</form>
 	</div>
 
