--- a/connexion.html
+++ b/connexion.html
@@ -41,10 +41,10 @@
 <form action="" class="form-group row">
 
 	<label class="col-3 offset-1" for="">Mail :</label>
-	<input class="col-6 mt-1" type="mail" placeholder="Votre mail" required="true">
+	<input class="col-6 mt-1 rounded" type="mail" placeholder="Votre mail" required="true">
 
 	<label class="col-3 offset-1" for="">Mot de passe :</label>
-	<input class="col-6 mt-2" type="password" required="true">
+	<input class="col-6 mt-2 rounded" type="password" required="true">
 
 	<div class="col-12">
 	<input class="btn btn-outline-info offset-5 mt-2" type="button" value="Se connecter">
