--- a/contact.html
+++ b/contact.html
@@ -54,13 +54,13 @@
 <form action="" class="form-group row mt-3">
 
 	<label class="col-3 offset-1" for="">Mail :</label>
-	<input class="col-6 mt-1" type="mail" placeholder="Votre mail" required="true">
+	<input class="col-6 mt-1 rounded" type="mail" placeholder="Votre mail" required="true">
 
 	<label class="col-3 offset-1" for="">Nom :</label>
-	<input class="col-6 mt-1" type="text" placeholder="Votre nom" required="true">
+	<input class="col-6 mt-1 rounded" type="text" placeholder="Votre nom" required="true">
 
 	<label class="col-3 offset-1" for="">Votre message :</label>
-	<textarea class="col-6 mt-1" placeholder="Message ..."></textarea>
+	<textarea class="col-6 mt-1 rounded" placeholder="Message ..."></textarea>
 
 
 	<div class="col-12">
