--- a/inscription.html
+++ b/inscription.html
@@ -40,19 +40,19 @@
 	<h2>Inscription</h2>
 <form action="" class="form-group row">
 	<label class="col-3 offset-1" for="">Nom :</label>
-	<input class="col-6 mt-1" type="text" placeholder="Votre nom" required="true">
+	<input class="col-6 mt-1 rounded" type="text" placeholder="Votre nom" required="true">
 
 	<label class="col-3 offset-1" for="">Prénom :</label>
-	<input class="col-6 mt-1" type="text" placeholder="Votre prénom" required="true">
+	<input class="col-6 mt-1 rounded" type="text" placeholder="Votre prénom" required="true">
 
 	<label class="col-3 offset-1" for="">Mail :</label>
-	<input class="col-6 mt-1" type="mail" placeholder="Votre mail" required="true">
+	<input class="col-6 mt-1 rounded-sm" type="mail" placeholder="Votre mail" required="true">
 
 	<label class="col-3 offset-1" for="">Mot de passe :</label>
-	<input class="col-6 mt-2" type="password" required="true">
+	<input class="col-6 mt-2 rounded" type="password" required="true">
 
 	<label class="col-3 offset-1" for="">Confirmez le mot de passe :</label>
-	<input class="col-6 mt-2" type="password" required="true">
+	<input class="col-6 mt-2 rounded" type="password" required="true">
 
 	<div class="col-12">
 	<input class="btn btn-outline-info offset-5 mt-2" type="button" value="S'inscrire">
