--- a/connexion.html
+++ b/connexion.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-	<meta charset="UTF-8">
 	<title>Blog de dylan</title>
 	<!-- Meta ViewPort -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<!-- BootStrap CDN -->
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 		<!-- Reset CSS (mettre avant style.css)-->
 		<link rel="stylesheet" type="text/css" href="assets/style/reset.css">
 		<!-- Feuille de style -->
@@ -35,32 +32,34 @@
 
         </div>
 	</header>
-<section id="inscription" class="">
+
+<section id="inscription">
 	<article>
-	<h2>Connexion</h2>
-<form action="" class="form-group row">
+		<h2>Connexion</h2>
+		<form action="" id="forminscrip">
 
-	<label class="col-3 offset-1" for="">Mail :</label>
-	<input class="col-6 mt-1 rounded" type="mail" placeholder="Votre mail" required="true">
+			<label for="">Mail :</label>
+			<input type="mail" placeholder="Votre mail" required="true">
 
-	<label class="col-3 offset-1" for="">Mot de passe :</label>
-	<input class="col-6 mt-2 rounded" type="password" required="true">
+			<label for="">Mot de passe :</label>
+			<input type="password" required="true">
 
-	<div class="col-12">
-	<input class="btn btn-outline-info offset-5 mt-2" type="button" value="Se connecter">
-	</div>
-</form>
+			<div>
+			<input type="button" value="Se connecter">
+			</div>
+		</form>
 
-<div id="divdejainscrit"><a href="inscription.html">Nouveau sur le site ?</a></div>
-</article>
+		<div id="divdejainscrit"><a href="inscription.html">Nouveau sur le site ?</a></div>
+	</article>
 </section>
-<footer class="row" id="footer2">
-	<div class="col-6" id="footericons">
+
+<footer id="footer2">
+	<div id="footericons">
 		<a href=""><img src="assets/img/icon facebook.png" alt=""></a>
 		<a href=""><img src="assets/img/icon instagram.png" alt=""></a>
 		<a href=""><img src="assets/img/icon twitter.png" alt=""></a>
 	</div>
-	<p id="textfooter" class="col-6">Contact : </br> Tavares Dylan , 16 rue de la soif 06515 Carros </br>
+	<p id="textfooter">Contact : </br> Tavares Dylan , 16 rue de la soif 06515 Carros </br>
 	tel : 0614144256</p>
 </footer>
 
